--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <h1>test</h1>
     <div id="root">
+        <h1>test</h1>
     </div>
+    
+    <h1>test</h1>
 
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
