--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React-Js</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <h1>test</h1>
-    <div id="root">
-        <h1>test</h1>
+    <h1>test 1</h1>
+    <div id="root2">
+        <h1>root2</h1>
     </div>
-    
-    <h1>test</h1>
+    <div id="root">
+        <h1>test 2</h1>
+    </div>
+
+
+    <h1>test 3</h1>
 
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="app.js"></script>
- 
+    <!-- <script src="app.js"></script> -->
+    <script src="script.js"></script>
+
 </body>
+
 </html>
