--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React-Js</title>
+    <title>Order Ho !!</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>test</h1>
     <div id="root">
-        <h1>test</h1>
+        <!-- <h1>React Component is loading...</h1> -->
     </div>
-    
-    <h1>test</h1>
 
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="./src/app.js"></script>
  
 </body>
 </html>
